installed gulp and gutil

--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "repository": {
     "type": "git",
     "url": "?.git"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-util": "^3.0.6"
   }
 }
