--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "Jonathan Shoaf",
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/jshoaf/lynda-workflows.git"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
     "gulp-util": "^3.0.6"
   }
 }
